--- a/client/index.html
+++ b/client/index.html
@@ -31,11 +31,11 @@
             </div>
             <div class="col-sm-4 col-md-4 text-center">
                 <div class="btn-group">
-                    <button class="btn btn-default active" title="Wszystkie typy plików"><i class="fa fa-file-o"></i></button>
-                    <button class="btn btn-default" title="Zdjęcia"><i class="fa fa-picture-o"></i></button>
-                    <button class="btn btn-default" title="Audio"><i class="fa fa-music"></i></button>
-                    <button class="btn btn-default" title="Wideo"><i class="fa fa-video-camera"></i></button>
-                    <button class="btn btn-default" title="Archiwa"><i class="fa fa-archive"></i></button>
+                    <button ng-click="setFilterType(false)" ng-class="{'active': !fileTypeFilter}" class="btn btn-default" title="Wszystkie typy plików"><i class="fa fa-file-o"></i></button>
+                    <button ng-click="setFilterType('images')" ng-class="{'active': fileTypeFilter == 'images'}" class="btn btn-default" title="Zdjęcia"><i class="fa fa-picture-o"></i></button>
+                    <button ng-click="setFilterType('audio')" ng-class="{'active': fileTypeFilter == 'audio'}" class="btn btn-default" title="Audio"><i class="fa fa-music"></i></button>
+                    <button ng-click="setFilterType('video')" ng-class="{'active': fileTypeFilter == 'video'}" class="btn btn-default" title="Wideo"><i class="fa fa-video-camera"></i></button>
+                    <button ng-click="setFilterType('archive')" ng-class="{'active': fileTypeFilter == 'archive'}" class="btn btn-default" title="Archiwa"><i class="fa fa-archive"></i></button>
                 </div>
             </div>
             <div class="col-sm-4 col-md-4 col-md-push-1 col-sm-push-1">
@@ -52,7 +52,7 @@
                     <i class="thumb-image fa fa-folder-o"></i>
                     <div class="thumb-name" data-ng-bind="dir.name"></div>
                 </div>
-                <div ng-repeat="file in files" class="thumb thumb-file img-thumbnail">
+                <div ng-repeat="file in files | fileMime:(fileTypes[fileTypeFilter] || [])" class="thumb thumb-file img-thumbnail">
                     <img class="thumb-image" ng-src="{{ file.src }}">
                     <div class="thumb-name" data-ng-bind="file.name"></div>
                 </div>
