- unit tests - service with mime types - service with icons extensions - file model (no image) has property src (thumbnail icon) - small css upgrades

--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div ng-repeat="file in files | fileMime:(fileTypes[fileTypeFilter] || []) | filter:{'name': search } | orderBy:'name'" class="thumb thumb-file img-thumbnail">
                     <img ng-if="file.isImage()" ng-src="{{ file.src }}" class="thumb-image" >
-                    <div ng-if="!file.isImage()" class="thumb-image" ><i class="fa {{ getIconClass(file) }}"></i></div>
+                    <img ng-if="!file.isImage()" ng-src="{{ file.icon }}" class="thumb-image thumb-icon" >
                     <div class="thumb-name" data-ng-bind="file.name"></div>
                 </div>
             </div>
